--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+altgraph==0.17.4
 certifi==2023.7.22
 charset-normalizer==3.2.0
 idna==3.4
+packaging==23.2
+pefile==2023.2.7
+pyinstaller==6.2.0
+pyinstaller-hooks-contrib==2023.10
 PySimpleGUI==4.60.5
+pywin32-ctypes==0.2.2
 requests==2.31.0
 urllib3==2.0.4
